--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 	</head>
 		
 	<body>
-
+		
+		<div id="wrapper">
+		
+			<div id="bar_chart"></div>
+		
+		</div>
+	
 		<script src="http://d3js.org/d3.v3.min.js"></script>
 		<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 		<script src="script.js"></script>
