--- a/index.html
+++ b/index.html
@@ -1,39 +1,92 @@
 <!DOCTYPE html>
 <html lang="de">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<head>
-	
-		<meta charset="UTF-8"/>
-		<title>Informationsvisualisierung</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
-	
-	</head>
-		
-	<body>
-		
-		<div id="wrapper">
-		
-			<div class="module">
-			
-				<form oninput="numerisch.value=auswertung.value">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
-					<input id="year" type="range" name="auswertung" min="1990" max="2015" value="2000">
-					Gewähltes Jahr: <output name="numerisch">2000</output>
+    <title>Titel der Arbeit</title>
 
-				</form> 
-			
-			</div>
-			
-			<div id="bar_chart" class="module"></div>
+    <!-- Bootstrap-CSS -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/overrides.css" rel="stylesheet">
+
+    <!-- Besondere Stile für diese Vorlage -->
+    <link href="assets/css/sticky-footer-navbar.css" rel="stylesheet">
+
+    <!-- Unterstützung für Media Queries und HTML5-Elemente in IE8 über HTML5 shim und Respond.js -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <!-- Seiteninhalt -->
+    <div class="container">
+      <div class="page-header">
+        <h1>Lorem ipsum</h1>
+      </div>
+      <p class="lead">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</p>
+      
+	  <div class="jumbotron">
+	  
+		<form oninput="numerisch.value=auswertung.value">
+
+			<input id="year" type="range" name="auswertung" min="1910" max="2000" step="10" value="1990">
+			<h3>Gewähltes Jahr:</h3>
+			<output name="numerisch">1990</output>
+
+		</form> 
 		
-		</div>
+      </div>
+	  
+	   <div class="row">
+        <h3>Bevölkerungsverteilung über die Zeit</h3>
+		<div id="chart_1" class="module"></div>
+      </div>
+	  
+	  <div class="row">
+        <div class="col-md-4">
+          <h3>Einwohnerdichte in den Stadteilen</h3>
+		  <div id="chart_2" class="module"></div>
+       </div>
+        <div class="col-md-4">
+          <h3>München International</h3>
+		  <div id="chart_3" class="module"></div>
+        </div>
+        <div class="col-md-4">
+          <h3>Münchner Arbeitsmarkt</h3>
+		  <div id="chart_4" class="module"></div>
+        </div>
+      </div>
+	  
+	 <div class="row">
+        <div class="col-md-4">
+          <h3>Verkehr: Wo bewegt sich was in München?</h3>
+		  <div id="chart_5" class="module"></div>
+       </div>
+      </div>
+	  
+    </div>
+
 	
-		<script src="http://d3js.org/d3.v3.min.js"></script>
-		<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-		<script src="script_d3.js"></script>
-		<script src="jquery.js"></script>
-		<script src="script.js"></script>
+    <script src="assets/js/jquery.js"></script>
+	<script src="assets/js/d3.v3.min.js"></script>
+	<script src="assets/js/d3.tip.v0.6.3.js"></script>
+	<script src="assets/js/script.js"></script>
 	
-	</body>
+    <!-- Bootstrap-JavaScript
+    ================================================== -->
+    <!-- Am Ende des Dokuments platziert, damit Seiten schneller laden -->
+    <script src="assets/js/bootstrap.min.js"></script>
+    <!-- IE10-Anzeigefenster-Hack für Fehler auf Surface und Desktop-Windows-8 -->
+    <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
 	
+  </body>
 </html>
