Gender switch for first graphic

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 	  
 	   <div class="row">
         <h3>Bevölkerungsverteilung über die Zeit</h3>
+           <div>Choose gender (both is also possible)</div>
+           <label class="checkbox-inline"><input type="checkbox" value="">Male</label>
+           <label class="checkbox-inline"><input type="checkbox" value="">Female</label>
 		<div id="chart_1" class="module"></div>
       </div>
 	  
