hide slider tooltip and color female bars

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 	   <div class="row">
         <h3>Population over the last 100 years</h3>
            <div>Choose gender (both is also possible)</div>
-           <label class="checkbox-inline"><input id="select_sex_male" type="checkbox" value="" />Male</label>
-           <label class="checkbox-inline"><input id="select_sex_female" type="checkbox" value="" />Female</label>
+           <label class="checkbox-inline"><input id="select_sex_male" checked="checked" type="checkbox" value="" />Male</label>
+           <label class="checkbox-inline"><input id="select_sex_female" checked="checked" type="checkbox" value="" />Female</label>
 		<div id="chart_1" class="module"></div>
       </div>
 	  
