remove bar chart

--- a/index.html
+++ b/index.html
@@ -62,17 +62,13 @@
       </div>
 	  
 	  <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
           <h3>Population density in the districts</h3>
 		  <div id="chart_2" class="module"></div>
        </div>
-        <div class="col-md-4">
-          <h3>Munich international</h3>
+        <div class="col-md-6">
+          <h3>Unemployed density in the districts</h3>
 		  <div id="chart_3" class="module"></div>
-        </div>
-        <div class="col-md-4">
-          <h3>Employee market in Munich</h3>
-		  <div id="chart_4" class="module"></div>
         </div>
       </div>
 	  
